# powder-game-1

./: Cargo.toml  README.md  build.rs  dot.c  dot.h  elements.c  elements.h  main.c  random.c  vector.c  vector.h
elements/: 0.c  1.c  18.c  9.c  c4.c  clone.c  fan.c  fire.c  fireworks.c  gunpowder.c  ice.c  oil.c  powder.c  seed.c  snow.c  steam.c  stone.c  superball.c  water.c  wood.c
render/: menu.c
src/: main.rs  winmain.rs
src/platform/: mod.rs  sdl2.rs  shm.rs  windows.rs
