[package]
name = "powder_game"
version = "0.1.0"
edition = "2021"

[dependencies.windows]
version = "0.39.0"
features = [
   "Data_Xml_Dom",
   "Win32_Foundation",
   "Win32_Security",
   "Win32_System_Threading",
   "Win32_UI_WindowsAndMessaging",
   "Win32_Graphics_Gdi"
]

[build-dependencies]
cc = "1.0.73"
