[package]
name = "powder_game"
version = "0.1.0"
edition = "2021"

[dependencies]
sdl2 = "0.35.2"
widestring = "1.0.2"

[dependencies.windows]
version = "0.39.0"
features = [
   "Data_Xml_Dom",
   "Win32_Foundation",
   "Win32_Security",
   "Win32_System_Threading",
   "Win32_UI_WindowsAndMessaging",
   "Win32_Graphics_Gdi",
   "Win32_System_LibraryLoader",
   "Win32_UI_Controls_Dialogs",
   "Win32_System_SystemInformation",
   "Win32_Media",
   "Win32_UI_Input_KeyboardAndMouse"
]

[build-dependencies]
cargo-emit = "0.2.1"
cc = "1.0.73"
